--- a/Prac01/prac01a.html
+++ b/Prac01/prac01a.html
@@ -3,6 +3,7 @@
 
 <head>
 <title>A simple HTML document</title>
+  <link rel="icon" type="image/icon" href="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-256.icc">
 </head>
 
 <body>
