--- a/Prac01/prac01a.html
+++ b/Prac01/prac01a.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>A simple HTML document</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon"  href="/favicon.ico">
 </head>
 
 <body>
